@@ -23,13 +23,15 @@ The GECO metric relies on user-defined ground truth genes (co-expressed sets of 
 
 ## Clustering the dataset with *generate_clusters*
 
-**Step 0.** Prior to this step, the user should have performed any gene/sample filtering as needed to reduce the size of the dataset as much as possible. This includes performing any normalization steps (such as transformation to TPM, FPKM etc.) as well as feature scaling (Z-score normalization in the case of the sample data). Consider pruning any redundant genes falling below a certain TPM/FPKM threshold. The iterative clustering process within *generate_clusters* takes time proportional to the size of the dataset. Any attempts to reduce the size of the dataset will result in faster results.
+**Step 0.** The dataset to be clustered should be presented as a data.frame with the genes as the rows and the samples as the columns. Keep in mind that the gene names (the row names of the data.frame) **must** be listed using the same naming convention as the ground truth gene sets used for scoring in subsequent steps (i.e. if ENSEMBL IDs are used for gene labels, ENSEMBL IDs must also be used for ground truth gene sets).
 
-With all preprocessing complete, the dataset should be presented as a data.frame with the genes as the rows and the columns representing the samples. Also, keep in mind that the gene names (the row names of the data.frame) **must** be listed using the same naming convention as the ground truth gene sets used for scoring in subsequent steps (i.e. ENSEMBL IDs for gene labels, ENSEMBL IDs for ground truth gene sets).
+Prior to clustering, the user should perform any gene/sample filtering as needed to reduce the size of the dataset as much as possible. This includes performing any normalization steps (such as transformation to TPM, FPKM etc.) as well as feature scaling (Z-score normalization in the case of the sample data). Consider pruning any lowly expressed genes falling below a certain TPM/FPKM threshold. The iterative clustering process within *generate_clusters* takes time proportional to the size of the dataset. Any attempts to reduce the size of the dataset will result in faster results.
 
 **Step 1.** The prepared data can now be fed into the *generate_clusters* function. The example will show the default usage of the function, but many parameters regarding the clustering process can be adjusted. See the man page (?generate_clusters) for a list of optional parameters.
 
-The *generate_clusters* function should run in less than a minute, but your own larger datasets will take longer. The sample dataset has already been TPM and Z-score normalized. It is a 4000 gene x 120 sample data.frame. The 120 samples respresent 8 individuals (4 male, 4 female) each with 15 immunce cell types. The dataset was also filtered so that it would contain only protein coding genes. More information about this dataset can be found using the *?rnaSeq* command.
+The *generate_clusters* function should run in less than a minute, but your own larger datasets will take longer. The sample dataset has already been TPM and Z-score normalized. It is a 4000 gene x 120 sample data.frame. The 120 samples respresent 8 individuals (4 male, 4 female) each with 15 immune cell types. The dataset was also filtered so that it would contain only protein coding genes. More information about this dataset can be found using the *?rnaSeq* command.
+
+**NOTE: Using a seed value will ensure that the clusters generated by the function are reproducible. This is strongly encouraged.**
 
 ```{r}
 library(GECO)
@@ -37,26 +39,28 @@ library(GECO)
 data("rnaSeq", package = "GECO")
 
 # Perform the clustering and save the results for scoring in the next step
+set.seed(1234)
 GECO_clusters <- generate_clusters(rnaSeq)
 ```
 
-We have created our clusters, stored in a nested list structure seen below:
+We have created our clusters, stored in a nested list structure seen below.
 
 A visual example of the output follows, assuming default parameters were used:
+
 * 'GECO_clusters' is a list which is the output of the generate_clusters() function
 * within 'GECO_clusters' will be another list labeled "Iteration 1 - 10": these refer to the iterations
-  + the visual example assumes the first iteration is being investigated
+    + the visual example assumes the first iteration is being investigated
 * within each 'iteration' is another list containing all k-means clusters, with one entry per k-value
-  + the visual example assumes that we are looking at iteration '1' and the k-means object generated with k = 10
+    + the visual example assumes that we are looking at iteration '1' and the k-means object generated with k = 10
 
-GECO_clusters___________________________________________________________________
-|  
-| ['Iteration 1'] iterations____________________________________________________
-|                 |
-|                 | ['10'] kmeans_objects_______________________________________
-|                 |        |
-|                 |        |  kmeans(data, k=10, ...)
-|                 |        |
+GECO_clusters_________________        
+|        
+| ['Iteration 1']_________________        
+|               |     
+|               | ['10']_________________        
+|               |      |        
+|               |      |  kmeans(data, k=10, ...)        
+|               |      |        
 
 Ultimately, the visual example shows the k-means object from the first iteration when clustering with a k-value of 10. This can be inspected using the following code. Lets look at the first 9 genes from this iteration and the clusters they were assigned to:
 
@@ -93,27 +97,28 @@ write.table(gs_genes, file = "./GECOData/gs_genes.csv", row.names = FALSE,
 scores <- score_clusters(GECO_clusters, "./GECOData/")
 ```
 
-The output of the function will again be a nested list with the following structure:
+The output of the function will again be a nested list with the structure detailed below.
 
 The output of *score_clusters* is a list containing the scores to be used in the final step of assessing the clusters. Again, a visual representation of the output object is provided:
+
 * 'scores' is a list which is the output of the score_clusters() function
 * within 'scores' is another list, each nested list is labeled with the name of the ground truth gene set provided in the first line of the .csv files required by the score_clusters() function
-  + the visual example assumes that a ground truth set called 'x' was selected (a terrible label!)
+    + the visual example assumes that a ground truth set called 'x' was selected (a terrible label!)
 * within 'Gender Specific Genes' will be another list labeled "Iteration 1 - 10": these refer to the iterations
-  + the visual example assumes the first iteration is being investigated
+    + the visual example assumes the first iteration is being investigated
 * within each 'iteration' is another list containing all kmeans scores, broken down by k-value
-  + the visual example assumes a k-value of '10' is being investigated
+    + the visual example assumes a k-value of '10' is being investigated
 
-scores_____________________________________________________________________________________________
-|  
-| ['x'] Ground_Truth_Sets__________________________________________________________________________
-|       |
-|       | ['Iteration 1'] iterations_______________________________________________________________
-|       |                 |
-|       |                 | ['10'] k_value_________________________________________________________
-|       |                 |        |
-|       |                 |        |  scores table for all genes in this clustering configuration
-|       |                 |        |
+scores___________________________________________________________        
+|        
+| ['x']__________________________________________________________        
+|     |        
+|     | ['Iteration 1']__________________________________________        
+|     |               |        
+|     |               | ['10']___________________________________        
+|     |               |      |        
+|     |               |      |  scores table        
+|     |               |      |        
 
 Ultimate, the example shows the scores from the 'Gender Specific Genes' ground truth gene set within the first iteration given a k-value of 10. This can be inspected using the following code (without the *head* wrapper):
 
@@ -149,7 +154,7 @@ This figure would indicate that a plateau starts around k = 22, so any k-value o
 
 Because we only used a single ground truth set, and the set was looking at how well we could partition biological males from females (y-chromosome gene expression), it is possible that the optimal k-value could vary. This is the strength of the metric; depending on what the user wants to investigate and what ground truth gene sets are chosen, the metric will direct how best to cluster the genes.
 
-Regararding our example, to investigate how well the ground truth genes have been identified and clustered when using a k-value of 22, we can quickly look back at our original clusters.
+Regarding our example, to investigate how well the ground truth genes have been identified and clustered when using a k-value of 22, we can quickly look back at our original clusters.
 
 ```{r}
 # The first 9 genes of the sample dataset are our 9 gender specific genes
